[workspace]
resolver = "2"
members = [ "asset_provider", "signals", "sui" , "sui_md" , "sui_md/test", "sui_md_fs", "sui_runner" ]

[workspace.dependencies]
raylib.git = "https://github.com/manen/raylib-rs"
anyhow = "1.0.95"
thiserror = "2.0.12"

sui.path = "./sui"
sui_md.path = "./sui_md"
sui_md_fs.path = "./sui_md_fs"
sui_runner.path = "./sui_runner"
asset_provider.path = "./asset_provider"

signals.path = "./signals"
