[package]
name = "asset_provider"
version = "0.1.0"
edition = "2021"

[features]
default = [ "fs", "http" ]
fs = []
http = [ "dep:reqwest" ]

[dependencies]
reqwest = { version = "0.12.15", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
