[package]
name = "signals"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
anyhow.workspace = true
raylib.workspace = true
sui.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0.11"
miniz_oxide = "0.8.3"
